# PRU-dot-finder

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: badmath.h  gameLogic.h  network.h  zenCapeControls.h
app/src/: gameLogic.c  main.c  network.c  notmain.c  zenCapeControls.c
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  buzzer.h  pruDriver.h  segDisplay.h
hal/src/: accelerometer.c  buzzer.c  pruDriver.c  segDisplay.c
pru-as4/: 14segfun.c  CMakeLists.txt  Makefile  neoPixelRGBWSimple.c  pru-as4.c  sharedDataStruct.h
